--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -138,17 +138,18 @@ jobs:
     steps:
       - name: pull code
         uses: actions/checkout@v3
-
+        with:
+          submodules: "recursive"
+        
       - name: run tests
         run: |
-          mkdir ~/.ssh/
-          echo '${{secrets.gh-ssh-key}}' > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
-          ls -al ~/.ssh/
-          whoami
-          pwd
-          git submodule update --init --recursive
+          # mkdir ~/.ssh/
+          # echo '${{secrets.gh-ssh-key}}' > ~/.ssh/id_rsa
+          # chmod 600 ~/.ssh/id_rsa
+          # ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+          # ls -al ~/.ssh/
+          # whoami
+          # pwd
           composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
 
       - name: phpcs
