separate step to update submodules

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -145,8 +145,9 @@ jobs:
 
       - name: pull code
         uses: actions/checkout@v3
-        with:
-          submodules: "recursive"
+      - name: pull submodules if any exists
+        run: |
+          git submodule update --init --recursive
         
       - name: run tests
         run: |
