remove shit - numa numa saved the day

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -136,33 +136,14 @@ jobs:
     container: 
       image: composer:${{inputs.ComposerVersion}}
     steps:
-      - name: add ssh key
-        run: |
-          mkdir ~/.ssh/
-          echo '${{secrets.gh-ssh-key}}' > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
-
       - name: pull code
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.numa-numa-token }}
           submodules: recursive
-
-      # - name: pull submodules if any exists
-      #   run: |
-      #     git config --global --add safe.directory '*'
-      #     git submodule update --init --recursive
         
-      - name: run tests
+      - name: run composer
         run: |
-          # mkdir ~/.ssh/
-          # echo '${{secrets.gh-ssh-key}}' > ~/.ssh/id_rsa
-          # chmod 600 ~/.ssh/id_rsa
-          # ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
-          # ls -al ~/.ssh/
-          # whoami
-          # pwd
           composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
 
       - name: phpcs
