--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -10,6 +10,10 @@ on:
         required: false
         default: "latest"
         type: string
+      ComposerAdditionalArguments:
+        required: false
+        default: ""
+        type: string
       ForceSelfHosted:
         required: false
         type: boolean
@@ -144,7 +148,7 @@ jobs:
         
       - name: run composer
         run: |
-          composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
+          composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
 
       - name: phpcs
         run: |
