--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -18,6 +18,10 @@ on:
         required: false
         type: boolean
         default: false
+      SkipTests:
+        type: boolean
+        required: false
+        default: false
       PhpcsWorkdir:
         required: false
         type: string
@@ -132,6 +136,7 @@ jobs:
           echo       runners: ${{ steps.runners.outputs.runners }}       environment: ${{ steps.environment.outputs.environment }}      imagetag: ${{ steps.imagetag.outputs.imagetag }}      app: ${{ steps.imagetag.outputs.app }}      rebuildManifest: ${{ steps.did-manifest-change.outputs.any_changed }}
       
   tests:
+    if: !Not SkipTests
     needs: setup_variables
     env: 
       GITHUB_TOKEN: ${{ secrets.token }}
