added a switch to entirely skip testing phase

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -136,7 +136,7 @@ jobs:
           echo       runners: ${{ steps.runners.outputs.runners }}       environment: ${{ steps.environment.outputs.environment }}      imagetag: ${{ steps.imagetag.outputs.imagetag }}      app: ${{ steps.imagetag.outputs.app }}      rebuildManifest: ${{ steps.did-manifest-change.outputs.any_changed }}
       
   tests:
-    if: !Not SkipTests
+    if: ${{ inputs.SkipTests != true }}
     needs: setup_variables
     env: 
       GITHUB_TOKEN: ${{ secrets.token }}
@@ -187,7 +187,8 @@ jobs:
 
   build-image:
     timeout-minutes: 15
-    needs: [ "setup_variables", "tests" ]
+    needs: [ "setup_variables" ]
+    if: ${{ always() && ((inputs.SkipTests != true) &&  contains(join(needs.tests.result, ','), 'success')}}
     env: 
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
