--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -188,7 +188,7 @@ jobs:
   build-image:
     timeout-minutes: 15
     needs: [ "setup_variables" ]
-    if: ${{ always() && ( (inputs.SkipTests != true) &&  contains(join(needs.tests.result, ','), 'success') )}}
+    if: ${{ always() && ( needs.tests.result =='success' || needs.tests.result =='skipped' ) }}
     env: 
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
