--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -185,6 +185,14 @@ jobs:
         run: |
           manifest chart generate && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.0-${{github.sha}}"
 
+  testofskip:
+    needs: setup_variables
+    runs-on: ${{needs.setup_variables.outputs.runners}}
+    steps:
+      - name: test
+        if: ${{ always() && ( needs.tests.result =='success' || needs.tests.result =='skipped' ) }}
+        run: echo "dupa"
+
   build-image:
     timeout-minutes: 15
     needs: [ "setup_variables" ]
