try some variants of phpcs

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -157,7 +157,7 @@ jobs:
 
       - name: phpcs
         run: |
-          (php ./vendor/bin/phpcs ${{ inputs.PhpcsWorkdir }} || phpcs ${{ inputs.PhpcsWorkdir }})
+          (php ./vendor/bin/phpcs ${{ inputs.PhpcsWorkdir }} || ./vendor/bin/phpcs ${{ inputs.PhpcsWorkdir }})
 
       - name: phplint
         run: |
