--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -201,7 +201,7 @@ jobs:
   build-image:
     timeout-minutes: 15
     needs: [ "setup_variables", tests]
-    if: ${{ always() && ( needs.tests.result =='success' || needs.tests.result =='skipped' ) }}
+    if: ${{ always() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event.pull_request == 'true' }}
     env: 
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
