--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -184,9 +184,11 @@ jobs:
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v3
-      - uses: php-actions/composer@v3
+      - name: run composer
+        run: |
+          composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
       - uses: php-actions/behat@v1
-      
+
   manifest-generate:
     timeout-minutes: 5
     needs: setup_variables
