--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -185,8 +185,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: run composer
-        run: |
-          composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
+        uses: composer:${{inputs.ComposerVersion}}
+        with:
+          run: |
+            composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
       - uses: php-actions/behat@v1
 
   manifest-generate:
