--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -190,6 +190,8 @@ jobs:
           image: composer:${{inputs.ComposerVersion}}
           options: -v ${{ github.workspace }}:/work
           run: |
+            ls -al
+            pwd
             composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
       - uses: php-actions/behat@v1
 
