--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -188,7 +188,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: composer:${{inputs.ComposerVersion}}
-          options: -v ${{ github.workspace }}:/work
+          options: -v ${{ github.workspace }}:/app
           run: |
             ls -al
             pwd
