disable depracation wornings

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -194,7 +194,7 @@ jobs:
             pwd
             composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
       - name: Local development server
-        run: mkdir www && php -S 0.0.0.0:8000 -t www public/index.php &            
+        run: mkdir www && php -d error_reporting="E_ALL & ~E_DEPRECATED & ~E_STRICT" -S 0.0.0.0:8000 -t www public/index.php &            
       - uses: php-actions/behat@v1
 
   manifest-generate:
