--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -193,9 +193,12 @@ jobs:
             ls -alr
             pwd
             composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
-      - name: Local development server
-        run: mkdir www && php -d error_reporting="E_ALL & ~E_DEPRECATED & ~E_STRICT" -S 0.0.0.0:8000 -t www public/index.php &            
-      - uses: php-actions/behat@v1
+
+      - name: lets fire up the app
+        run: mkdir www && php -d 'error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT' -S 0.0.0.0:8000 -t www public/index.php &           
+       
+      - name: and test it
+        uses: php-actions/behat@v1
 
   manifest-generate:
     timeout-minutes: 5
