--- a/actions/build-and-push/action.yaml
+++ b/actions/build-and-push/action.yaml
@@ -34,7 +34,7 @@ runs:
         -   name: Docker Setup Buildx
             uses: docker/setup-buildx-action@v2.0.0
             with:
-                version: "v9.1.1"
+                version: v0.9.1
                 endpoint: builders
         -   name: Docker Login
             uses: docker/login-action@v2.0.0
