--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -195,6 +195,8 @@ jobs:
             composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
 
       - name: lets fire up the app
+        env:
+          SHELL_VERBOSITY: "-1"
         run: mkdir www && php -d error_reporting="~E_ALL & E_USER_DEPRICATED & E_DEPRECATED" -S 0.0.0.0:8000 -t www public/index.php &           
        
       - name: and test it
