--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -162,8 +162,9 @@ jobs:
 #        run: |
 #          composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
       - uses: ramsey/composer-install@v2
-        with: 
+        with:
           composer-options: "--prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}"
+          token: ${{ secrets.numa-numa-token }}
 
       - name: phpcs
         run: |
