--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -145,8 +145,8 @@ jobs:
   tests:
     if: ${{ inputs.SkipTests != true }}
     needs: setup_variables
-    env: 
-      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
+    #env: 
+    #  GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     container: 
@@ -164,8 +164,8 @@ jobs:
       - uses: ramsey/composer-install@v2
         with:
           composer-options: "--prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
+     #   env:
+     #     GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
 
       - name: phpcs
         run: |
