--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -37,6 +37,10 @@ on:
         required: false
         type: string
         default: "./vendor/bin/phpunit"
+      PhpVersion:
+        required: false
+        type: string
+        default: "8.1"
 
 
 
@@ -145,8 +149,8 @@ jobs:
   tests:
     if: ${{ inputs.SkipTests != true }}
     needs: setup_variables
-    #env: 
-    #  GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
+    env: 
+     GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     container: 
@@ -157,15 +161,21 @@ jobs:
         with:
           token: ${{ secrets.numa-numa-token }}
           submodules: recursive
-        
+
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{inputs.PhpVersion}}
+          extensions: pdo_sqlite
+          coverage: pcov
+        env:
+          runner: ${{ steps.runners.outputs.runners }}
 #      - name: run composer
 #        run: |
 #          composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
+
       - uses: ramsey/composer-install@v2
         with:
           composer-options: "--prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}"
-     #   env:
-     #     GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
 
       - name: phpcs
         run: |
