--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -153,8 +153,8 @@ jobs:
      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
-    container: 
-      image: composer:${{inputs.ComposerVersion}}
+    # container: 
+    #   image: composer:${{inputs.ComposerVersion}}
     steps:
       - name: pull code
         uses: actions/checkout@v3
