added setup php setup

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -188,7 +188,7 @@ jobs:
           find . -name '*.php' -not -path './vendor/*' -print0 | xargs -0 php -l
           
       - name: phpunit
-        if: ${{ inputs.SkipUnitTests != true }}
+        if: always() && ${{ inputs.SkipUnitTests != true }}
         run: |
           php ${{ inputs.UnitTestsExecutable }}
 
