--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -41,6 +41,10 @@ on:
         required: false
         type: string
         default: "8.1"
+      PoChujMiBuildImage:
+        required: false
+        type: boolean
+        default: true
 
 
 
@@ -169,9 +173,6 @@ jobs:
           coverage: pcov
         env:
           runner: self-hosted
-#      - name: run composer
-#        run: |
-#          composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
 
       - uses: ramsey/composer-install@v2
         with:
@@ -188,7 +189,7 @@ jobs:
           find . -name '*.php' -not -path './vendor/*' -print0 | xargs -0 php -l
           
       - name: phpunit
-        if: always() && ${{ inputs.SkipUnitTests != true }}
+        if: ((success() || failure()) && ${{ inputs.SkipUnitTests != true }})
         run: |
           php ${{ inputs.UnitTestsExecutable }}
 
